[package]
name = "hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.7"
bit_field = "0.10.0"
bitflags = "1.2.1"
riscv = {path = "../third/riscv/riscv", features = ["s-mode"]}
lazy_static = {version="1.4.0", features = ["spin_no_std"]}
fdt = "0.1.5"
spin = "0.9.8"
buddy_system_allocator = "0.8.0"